apps/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: platform-gateway
    app.kubernetes.io/part-of: engineering-platform
    platform.unif.internal/environment: dev
  name: platform-gateway
  namespace: platform
spec:
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: platform.dev.local
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ''
            kind: Secret
            name: platform-gateway-tls
        mode: Terminate
